whatever in notebooks

--- a/notebooks/first_attempt.ipynb
+++ b/notebooks/first_attempt.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-24T17:41:49.617055Z",
-     "start_time": "2025-03-24T17:41:48.797213Z"
+     "end_time": "2025-04-29T12:06:56.420929Z",
+     "start_time": "2025-04-29T12:06:55.870211Z"
     }
    },
    "cell_type": "code",
@@ -22,13 +22,13 @@
    ],
    "id": "3172f1549253a104",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-24T17:54:16.830695Z",
-     "start_time": "2025-03-24T17:51:35.517931Z"
+     "end_time": "2025-04-29T12:09:09.535522Z",
+     "start_time": "2025-04-29T12:06:59.499077Z"
     }
    },
    "cell_type": "code",
@@ -39,67 +39,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: transformers in c:\\venvs\\thesis\\venv\\lib\\site-packages (4.45.2)\n",
+      "Requirement already satisfied: transformers in c:\\venvs\\thesis\\venv\\lib\\site-packages (4.50.0)\n",
       "Collecting transformers\n",
-      "  Downloading transformers-4.50.0-py3-none-any.whl.metadata (39 kB)\n",
+      "  Downloading transformers-4.51.3-py3-none-any.whl.metadata (38 kB)\n",
       "Requirement already satisfied: filelock in c:\\venvs\\thesis\\venv\\lib\\site-packages (from transformers) (3.18.0)\n",
-      "Requirement already satisfied: huggingface-hub<1.0,>=0.26.0 in c:\\venvs\\thesis\\venv\\lib\\site-packages (from transformers) (0.29.3)\n",
+      "Collecting huggingface-hub<1.0,>=0.30.0 (from transformers)\n",
+      "  Downloading huggingface_hub-0.30.2-py3-none-any.whl.metadata (13 kB)\n",
       "Requirement already satisfied: numpy>=1.17 in c:\\venvs\\thesis\\venv\\lib\\site-packages (from transformers) (1.26.0)\n",
       "Requirement already satisfied: packaging>=20.0 in c:\\venvs\\thesis\\venv\\lib\\site-packages (from transformers) (24.2)\n",
       "Requirement already satisfied: pyyaml>=5.1 in c:\\venvs\\thesis\\venv\\lib\\site-packages (from transformers) (6.0.2)\n",
       "Requirement already satisfied: regex!=2019.12.17 in c:\\venvs\\thesis\\venv\\lib\\site-packages (from transformers) (2024.11.6)\n",
       "Requirement already satisfied: requests in c:\\venvs\\thesis\\venv\\lib\\site-packages (from transformers) (2.32.3)\n",
-      "Collecting tokenizers<0.22,>=0.21 (from transformers)\n",
-      "  Downloading tokenizers-0.21.1-cp39-abi3-win_amd64.whl.metadata (6.9 kB)\n",
+      "Requirement already satisfied: tokenizers<0.22,>=0.21 in c:\\venvs\\thesis\\venv\\lib\\site-packages (from transformers) (0.21.1)\n",
       "Requirement already satisfied: safetensors>=0.4.3 in c:\\venvs\\thesis\\venv\\lib\\site-packages (from transformers) (0.5.3)\n",
       "Requirement already satisfied: tqdm>=4.27 in c:\\venvs\\thesis\\venv\\lib\\site-packages (from transformers) (4.67.1)\n",
-      "Requirement already satisfied: fsspec>=2023.5.0 in c:\\venvs\\thesis\\venv\\lib\\site-packages (from huggingface-hub<1.0,>=0.26.0->transformers) (2024.12.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\venvs\\thesis\\venv\\lib\\site-packages (from huggingface-hub<1.0,>=0.26.0->transformers) (4.12.2)\n",
+      "Requirement already satisfied: fsspec>=2023.5.0 in c:\\venvs\\thesis\\venv\\lib\\site-packages (from huggingface-hub<1.0,>=0.30.0->transformers) (2024.12.0)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\venvs\\thesis\\venv\\lib\\site-packages (from huggingface-hub<1.0,>=0.30.0->transformers) (4.12.2)\n",
       "Requirement already satisfied: colorama in c:\\venvs\\thesis\\venv\\lib\\site-packages (from tqdm>=4.27->transformers) (0.4.6)\n",
       "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\venvs\\thesis\\venv\\lib\\site-packages (from requests->transformers) (3.4.1)\n",
       "Requirement already satisfied: idna<4,>=2.5 in c:\\venvs\\thesis\\venv\\lib\\site-packages (from requests->transformers) (3.10)\n",
       "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\venvs\\thesis\\venv\\lib\\site-packages (from requests->transformers) (2.3.0)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\venvs\\thesis\\venv\\lib\\site-packages (from requests->transformers) (2025.1.31)\n",
-      "Downloading transformers-4.50.0-py3-none-any.whl (10.2 MB)\n",
-      "   ---------------------------------------- 0.0/10.2 MB ? eta -:--:--\n",
-      "   ---------- ----------------------------- 2.6/10.2 MB 13.7 MB/s eta 0:00:01\n",
-      "   --------------------- ------------------ 5.5/10.2 MB 13.4 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  10.0/10.2 MB 12.4 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 10.2/10.2 MB 10.8 MB/s eta 0:00:00\n",
-      "Downloading tokenizers-0.21.1-cp39-abi3-win_amd64.whl (2.4 MB)\n",
-      "   ---------------------------------------- 0.0/2.4 MB ? eta -:--:--\n",
-      "   -------------------------------------- - 2.4/2.4 MB 15.0 MB/s eta 0:00:01\n",
-      "   -------------------------------------- - 2.4/2.4 MB 15.0 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 2.4/2.4 MB 3.7 MB/s eta 0:00:00\n",
-      "Installing collected packages: tokenizers, transformers\n",
-      "  Attempting uninstall: tokenizers\n",
-      "    Found existing installation: tokenizers 0.20.3\n",
-      "    Uninstalling tokenizers-0.20.3:\n",
-      "      Successfully uninstalled tokenizers-0.20.3\n",
+      "Downloading transformers-4.51.3-py3-none-any.whl (10.4 MB)\n",
+      "   ---------------------------------------- 0.0/10.4 MB ? eta -:--:--\n",
+      "   ------ --------------------------------- 1.6/10.4 MB 8.4 MB/s eta 0:00:02\n",
+      "   --------------- ------------------------ 3.9/10.4 MB 10.2 MB/s eta 0:00:01\n",
+      "   ----------------------- ---------------- 6.0/10.4 MB 9.7 MB/s eta 0:00:01\n",
+      "   --------------------------------- ------ 8.7/10.4 MB 10.1 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 10.4/10.4 MB 10.0 MB/s eta 0:00:00\n",
+      "Downloading huggingface_hub-0.30.2-py3-none-any.whl (481 kB)\n",
+      "Installing collected packages: huggingface-hub, transformers\n",
+      "  Attempting uninstall: huggingface-hub\n",
+      "    Found existing installation: huggingface-hub 0.29.3\n",
+      "    Uninstalling huggingface-hub-0.29.3:\n",
+      "      Successfully uninstalled huggingface-hub-0.29.3\n",
       "  Attempting uninstall: transformers\n",
-      "    Found existing installation: transformers 4.45.2\n",
-      "    Uninstalling transformers-4.45.2:\n",
-      "      Successfully uninstalled transformers-4.45.2\n",
-      "Successfully installed tokenizers-0.21.1 transformers-4.50.0\n"
+      "    Found existing installation: transformers 4.50.0\n",
+      "    Uninstalling transformers-4.50.0:\n",
+      "      Successfully uninstalled transformers-4.50.0\n",
+      "Successfully installed huggingface-hub-0.30.2 transformers-4.51.3\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  WARNING: Failed to remove contents in a temporary directory 'C:\\venvs\\thesis\\venv\\Lib\\site-packages\\~okenizers'.\n",
-      "  You can safely remove it manually.\n"
+      "\n",
+      "[notice] A new release of pip is available: 25.0.1 -> 25.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 2
   },
   {
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-03-24T17:41:30.021259Z",
-     "start_time": "2025-03-24T17:41:28.771641Z"
+     "end_time": "2025-04-29T12:09:21.077482Z",
+     "start_time": "2025-04-29T12:09:13.120485Z"
     }
    },
    "cell_type": "code",
@@ -225,12 +223,12 @@
        "</div>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1
+   "execution_count": 3
   },
   {
    "metadata": {
